Fix storage loading bug